--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -23,3 +23,19 @@ urllib3==1.26.15
 uvicorn==0.21.1
 yarl==1.8.2
 motor==2.5.1
+## The following requirements were added by pip freeze:
+beautifulsoup4==4.12.2
+cachetools==5.3.0
+dnspython==2.3.0
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+lxml==4.9.2
+numpy==1.24.3
+oauthlib==3.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pymongo==3.13.0
+requests-oauthlib==1.3.1
+rsa==4.9
+six==1.16.0
+soupsieve==2.4.1
